# w2a-lol

./: .gitignore  README.md  docker-compose.yaml
w2-api/: .gitignore  README.md  configuration.json  requirements.txt
w2-api/src/: auth.py  database.py  deps.py  main.py  models.py  utils.py
w2-api/src/crud/: crud_player.py  crud_team.py  crud_user.py
w2-ct/: configuration.json
w2-ct/src/: lea.py  main.py  models.py  service.py  utils.py
w2-dawe/: Dockerfile  requirements.txt
w2-dawe/src/: dawe.py  main.py
w2-gm/: requirements.txt
w2-gm/src/: dawe.py  game.py  main.py  utils.py
w2-view/: LICENSE  README.md  package-lock.json  package.json
w2-view/src/: App.jsx  convertState.js  index.css
w2-view/src/europe/: Overlay.jsx  Pick.jsx
w2-view/src/europe/style/: index.module.scss  picks.scss  team.scss  timer.scss
w2project/: .gitignore  README.md  pyproject.toml
w2project/w2project/schemas/: dawe.py  game.py  player.py  team.py
w2project/w2project/services/: riot.py  service.py  w2api.py
