[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "w2project"
version = "0.0.1"
authors = [
  { name="Paula (Latra) Gallucci", email="latra@w2avalanche.com" },
]
description = "W2 Utils for W2 Services"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["w2project"]

[project.urls]
"Homepage" = "https://github.com/W2Avalanche"
"Bug Tracker" = "https://github.com/W2Avalanche/W2Avalanche/issues"